--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "next": "^12.1.6",
+    "next": "^12.2.0",
+    "node": "^18.4.0",
     "nodemon": "^2.0.16",
     "react": "18.0.0",
     "react-bootstrap": "^2.4.0",
